# UltimaScraperRenamer

./: .gitignore  pyproject.toml  requirements.txt  setup.py  start_usr.py  usr_settings.py
ultima_scraper_renamer/: reformat.py  renamer.py
