[tool.poetry]
name = "ultima-scraper-renamer"
version = "1.1.4"
description = ""
authors = [
    "UltimaHoarder <1285176+UltimaHoarder@users.noreply.github.com>",
]
readme = "README.md"
packages = [{include = "ultima_scraper_renamer"}]
include = ["ultima_scraper_renamer/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tqdm = "^4.64.1"
orjson = "^3.8.3"
ultima-scraper-api = "^2.0.0"
ultima-scraper-collection = "^2.0.0"



[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.2"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
